# malk-2018

./: .gitignore  Cargo.toml  grammar.grm
grammar-macro/: Cargo.toml
grammar-macro/src/: lib.rs
src/: document.rs  future_ext.rs  interner.rs  lsp_types_ext.rs  main.rs  priv_prelude.rs  result_ext.rs
src/compile/: mod.rs
src/core/: constraint.rs  ctx.rs  debug.rs  ident.rs  meta.rs  mod.rs  name.rs  pat.rs  refute.rs  render.rs  solve.rs  term.rs  ty.rs
src/core.old/: bump.rs  check.rs  ctx.rs  ident.rs  mod.rs  occurances.rs
src/core2/: ctx.rs  term.rs  ty.rs
src/lexer/: lex.rs  mod.rs  span.rs  symbol_table.rs  token.rs  tokens.rs
src/lsp/: async_fd.rs  client.rs  diagnostic.rs  execute_command.rs  initialize.rs  json.rs  json_object.rs  json_spec.rs  log.rs  message_type.rs  mod.rs  msg.rs  server.rs  stdio.rs  text_document.rs
src/parser/: composite_pat.rs  composite_term.rs  composite_type.rs  enum_term_or_func.rs  enum_type.rs  expr.rs  ident.rs  mod.rs  neg_func_term.rs  pat.rs  struct_pat.rs  struct_term.rs  struct_type.rs
src/parser.new/: mod.rs
src/parser/old/: composite_term_elem.rs  composite_type.rs  composite_type_elem.rs  enum_term.rs  enum_type.rs  expr.rs  func_app.rs  func_term.rs  func_type.rs  ident.rs  let_expr.rs  level_literal.rs  mod.rs  parens.rs  pattern.rs  struct_term.rs  (+3 more)
src/render/: mod.rs
src/server/: doc.rs  mod.rs
src/syntax/: expr.rs  ident.rs  mod.rs  name.rs
src/test/: mod.rs
src/typechecker/: check.rs  mod.rs  unify.rs
src/wasm/: build.rs  encode.rs  execute.rs  mod.rs  structure.rs  validate.rs
